test_regress/t/t_notiming_off.out
%Error-NOTIMING: t/t_timing_off.v:27:5: Event control statement in this location requires --timing
                                      : ... note: In instance 't'
                                      : ... With --no-timing, suggest have one event control statement per procedure, at the top of the procedure
   27 |     @e1;
      |     ^
                 ... For error description see https://verilator.org/warn/NOTIMING?v=latest
%Warning-STMTDLY: t/t_timing_off.v:34:11: Ignoring delay on this statement due to --no-timing
                                        : ... note: In instance 't'
   34 |   initial #2->e1;
      |           ^
                  ... For warning description see https://verilator.org/warn/STMTDLY?v=latest
                  ... Use "/* verilator lint_off STMTDLY */" and lint_on around source to disable this message.
%Warning-STMTDLY: t/t_timing_off.v:38:11: Ignoring delay on this statement due to --no-timing
                                        : ... note: In instance 't'
   38 |   initial #3 $stop;   
      |           ^
%Warning-STMTDLY: t/t_timing_off.v:39:11: Ignoring delay on this statement due to --no-timing
                                        : ... note: In instance 't'
   39 |   initial #1 @(e1, e2) #1 $stop;   
      |           ^
%Error-NOTIMING: t/t_timing_off.v:39:14: Event control statement in this location requires --timing
                                       : ... note: In instance 't'
                                       : ... With --no-timing, suggest have one event control statement per procedure, at the top of the procedure
   39 |   initial #1 @(e1, e2) #1 $stop;   
      |              ^
%Warning-STMTDLY: t/t_timing_off.v:39:24: Ignoring delay on this statement due to --no-timing
                                        : ... note: In instance 't'
   39 |   initial #1 @(e1, e2) #1 $stop;   
      |                        ^
%Error: Exiting due to
